--- a/package.json
+++ b/package.json
@@ -8,6 +8,10 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@capacitor/android": "^7.4.3",
+    "@capacitor/camera": "^7.0.2",
+    "@capacitor/cli": "^7.4.3",
+    "@capacitor/core": "^7.4.3",
     "@j-t-mcc/vue3-chartjs": "^2.0.0",
     "@popperjs/core": "^2.11.8",
     "@simonwep/pickr": "^1.9.0",
@@ -25,10 +29,12 @@
     "bootstrap-vue-next": "^0.15.5",
     "click-outside-vue3": "^4.0.1",
     "core-js": "^3.37.0",
+    "dayjs": "^1.11.18",
     "echarts": "^5.5.0",
     "feather-icons": "^4.29.1",
     "firebase": "^10.7.1",
     "highlight.js": "^11.9.0",
+    "html5-qrcode": "^2.3.8",
     "leaflet": "^1.9.4",
     "lottie-web": "^5.12.2",
     "maska": "^2.1.10",
