--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "vue-feather": "~2.0.0",
     "vue-flatpickr-component": "^11.0.5",
     "vue-i18n": "^9.13.1",
+    "vue-loading-overlay": "^6.0.6",
     "vue-prismjs": "^1.2.0",
     "vue-router": "^4.3.2",
     "vue-sweetalert2": "^5.0.11",
