--- a/capacitor.config.json
+++ b/capacitor.config.json
@@ -1,5 +1,10 @@
 {
   "appId": "com.dost9.myapp",
   "appName": "DOST-IX",
-  "webDir": "dist"
+  "webDir": "dist",
+  "server": {
+    "allowNavigation": [
+      "rstwhanda.dost9.ph"  
+    ]
+  }
 }
