--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "vue-sweetalert2": "^5.0.11",
     "vue3-apexcharts": "^1.5.2",
     "vue3-count-to": "^1.1.2",
+    "vue3-signature-pad": "^1.0.7",
     "vuex": "^4.1.0",
     "vuex-persistedstate": "^4.1.0",
     "yarn": "^1.22.22"
