--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@capacitor/camera": "^7.0.2",
     "@capacitor/cli": "^7.4.3",
     "@capacitor/core": "^7.4.3",
+    "@capacitor/ios": "^7.4.3",
     "@j-t-mcc/vue3-chartjs": "^2.0.0",
     "@popperjs/core": "^2.11.8",
     "@simonwep/pickr": "^1.9.0",
