--- a/capacitor.config.json
+++ b/capacitor.config.json
@@ -13,6 +13,8 @@
             "launchAutoHide": true,
             "backgroundColor": "#ffffff",
             "androidScaleType": "CENTER_CROP",
+            "androidSplashResourceName": "splash",
+            "iosSplashResourceName": "splash",
             "showSpinner": false
         }
     }
